--- a/src/main/resources/static/css/portfolio.css
+++ b/src/main/resources/static/css/portfolio.css
@@ -493,7 +493,7 @@ footer {
 footer .container {
   min-height: 25vh;
   min-height: 25svh;
-  min-height: calc(var(--vh, 1vh) * 25);
+  min-height: 25dvh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -604,6 +604,7 @@ footer p {
   .section-home .content-wrapper .content-right dotlottie-player {
     height: auto;
     width: auto;
+    max-height: 420px;
   }
 
   .section-projects .my-projects {
